feat: 添加Gmail SMTP和OAuth配置到GitHub Actions部署流程
- 更新GitHub Actions部署脚本，添加OAuth和邮件验证环境变量
- 配置Gmail SMTP服务 (sizhe1118@gmail.com)
- 配置Google OAuth客户端
- 添加邮件服务初始化时的代理处理
- 创建GitHub Secrets验证和设置脚本
- 添加部署后测试脚本
- 更新部署指南文档

新增功能:
✅ 用户注册邮箱验证
✅ 密码重置邮件
✅ Google OAuth登录
✅ 自动化部署测试

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
             --max-instances=10 \
             --port=3000 \
             --timeout=300 \
-            --set-env-vars="NODE_ENV=production,MONGODB_URI=${{ secrets.MONGODB_URI }},MONGODB_DB_NAME=${{ secrets.MONGODB_DB_NAME }},JWT_SECRET=${{ secrets.JWT_SECRET }},GOOGLE_VISION_API_KEY=${{ secrets.GOOGLE_VISION_API_KEY }},SESSION_SECRET=${{ secrets.SESSION_SECRET }},CSRF_SECRET=${{ secrets.CSRF_SECRET }}"
+            --set-env-vars="NODE_ENV=production,MONGODB_URI=${{ secrets.MONGODB_URI }},MONGODB_DB_NAME=${{ secrets.MONGODB_DB_NAME }},JWT_SECRET=${{ secrets.JWT_SECRET }},GOOGLE_VISION_API_KEY=${{ secrets.GOOGLE_VISION_API_KEY }},SESSION_SECRET=${{ secrets.SESSION_SECRET }},CSRF_SECRET=${{ secrets.CSRF_SECRET }},ENABLE_OAUTH=${{ secrets.ENABLE_OAUTH }},GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }},GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }},ENABLE_EMAIL_VERIFICATION=${{ secrets.ENABLE_EMAIL_VERIFICATION }},SMTP_HOST=${{ secrets.SMTP_HOST }},SMTP_PORT=${{ secrets.SMTP_PORT }},SMTP_USER=${{ secrets.SMTP_USER }},SMTP_PASS=${{ secrets.SMTP_PASS }}"
 
   deploy-frontend:
     name: Deploy Frontend
