--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,20 @@ SWAGGER_ENABLED=true  # 设置为false可在生产环境禁用API文档
 # Google Vision API配置
 GOOGLE_VISION_API_KEY=your_google_vision_api_key
 
+# OAuth配置 (生产环境)
+ENABLE_OAUTH=false  # 本地开发设为false，生产环境设为true
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+APPLE_CLIENT_ID=your_apple_client_id
+APPLE_CLIENT_SECRET=your_apple_client_secret
+
+# 邮箱验证配置 (生产环境)
+ENABLE_EMAIL_VERIFICATION=false  # 本地开发设为false，生产环境设为true
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_password
+
 # JWT配置 - 安全重要!
 # 生产环境中请使用强随机密钥，可用以下命令生成:
 # node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
