--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,36 @@
   "scripts": {
     "start": "NODE_ENV=production node server.js",
     "dev": "node start.js dev",
+    "dev:nodemon": "nodemon start.js dev",
+    "dev:pm2": "pm2 start ecosystem.config.js --env development",
     "prod": "node start.js prod",
+    "prod:pm2": "pm2 start ecosystem.config.js --env production",
     "test": "node start.js test",
+    "stop": "npm run kill:all",
+    "restart": "npm run stop && npm run dev",
+    "kill:all": "pkill -f 'node.*server.js' || true && pkill -f 'node.*start.js' || true",
+    "kill:port": "lsof -ti:3000 | xargs kill -9 || true",
+    "clean": "npm run kill:all && npm run kill:port",
+    "status": "ps aux | grep -E 'node.*(server|start)' | grep -v grep || echo 'No Node.js processes found'",
+    "pm2:status": "pm2 status",
+    "pm2:stop": "pm2 stop all",
+    "pm2:restart": "pm2 restart all",
+    "pm2:delete": "pm2 delete all",
+    "pm2:logs": "pm2 logs",
+    "process:status": "node scripts/process-manager.js status",
+    "process:clean": "node scripts/process-manager.js clean",
+    "process:dev": "node scripts/process-manager.js dev",
+    "process:dev:nodemon": "node scripts/process-manager.js dev:nodemon",
+    "process:pm2:dev": "node scripts/process-manager.js pm2:dev",
+    "process:pm2:prod": "node scripts/process-manager.js pm2:prod",
     "migrate": "node ../tools/migrate-to-mongodb.js",
     "check-mongodb": "node ../tools/check-mongodb-config.js",
-    "normalize-data": "node ../tools/normalize-mongodb-data.js"
+    "normalize-data": "node ../tools/normalize-mongodb-data.js",
+    "test:email": "node test-email.js",
+    "test:email:guide": "node test-email.js --guide",
+    "verify:github-secrets": "cd .. && node scripts/verify-github-secrets.js",
+    "setup:github-secrets": "cd .. && node scripts/verify-github-secrets.js --setup",
+    "test:deployment": "cd .. && node scripts/test-deployment.js"
   },
   "dependencies": {
     "@google-cloud/vision": "^5.1.0",
@@ -27,12 +52,15 @@
     "mongoose": "^7.8.7",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^4.0.7",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
+    "validator": "^13.15.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -40,10 +68,13 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.5",
     "@types/uuid": "^9.0.2",
+    "chalk": "^5.4.1",
     "dotenv": "^16.5.0",
     "form-data": "^4.0.2",
     "https-proxy-agent": "^7.0.6",
     "node-fetch": "^2.7.0",
+    "nodemon": "^3.1.10",
+    "pm2": "^6.0.6",
     "proxy-agent": "^6.5.0",
     "socks-proxy-agent": "^8.0.5",
     "ts-node": "^10.9.1",
