--- a/backend/package.json
+++ b/backend/package.json
@@ -61,7 +61,8 @@
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "validator": "^13.15.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "dotenv": "^16.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -69,7 +70,6 @@
     "@types/node": "^20.4.5",
     "@types/uuid": "^9.0.2",
     "chalk": "^5.4.1",
-    "dotenv": "^16.5.0",
     "form-data": "^4.0.2",
     "https-proxy-agent": "^7.0.6",
     "node-fetch": "^2.7.0",
