--- a/backend/package.json
+++ b/backend/package.json
@@ -62,7 +62,12 @@
     "uuid": "^11.1.0",
     "validator": "^13.15.0",
     "winston": "^3.17.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "form-data": "^4.0.2",
+    "https-proxy-agent": "^7.0.6",
+    "node-fetch": "^2.7.0",
+    "proxy-agent": "^6.5.0",
+    "socks-proxy-agent": "^8.0.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -70,13 +75,8 @@
     "@types/node": "^20.4.5",
     "@types/uuid": "^9.0.2",
     "chalk": "^5.4.1",
-    "form-data": "^4.0.2",
-    "https-proxy-agent": "^7.0.6",
-    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
     "pm2": "^6.0.6",
-    "proxy-agent": "^6.5.0",
-    "socks-proxy-agent": "^8.0.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
