--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:check": "./dev-check.sh",
+    "dev:start": "./dev-start.sh start",
+    "dev:stop": "./dev-start.sh stop",
+    "dev:restart": "./dev-start.sh restart",
+    "dev:status": "./dev-start.sh status",
+    "cleanup": "pkill -f 'node.*start.js' || true; pkill -f 'python.*main.py' || true; pkill -f 'npm run dev' || true; pkill mongod || true"
   },
   "repository": {
     "type": "git",
